sizing/spacing fixes

--- a/src/BoltonCup.WebClient/Components/Pages/Profile.razor.css
+++ b/src/BoltonCup.WebClient/Components/Pages/Profile.razor.css
@@ -3,7 +3,7 @@
     overflow: hidden;
     position: relative;
     width: 100%;
-    height: 450px;
+    max-height: 450px;
     background-position: center center;
     background-color: rgba(0, 0, 0, 0.6);
 }
